@@ -34,6 +34,17 @@
  *         npdb->channel,
  *         npdb->res,
  *         (uintmax_t)time
+ *
+ * With the [-e] option it prints the following additional values after those:
+ *
+ *	lat1  (lat of first grid point) int x 10000
+ *	lon1  (lon of first grid point) int x 10000
+ *      lov   (orientation of grid)     int x 10000
+ *      dx    (x-direction increment)
+ *      dy    (y-direction increment)
+ *      latin (Earth tangent)           int x 10000
+ *      lat2  (upper right-hand corner lat) int x 10000
+ *      lon2  (upper right-hand corner lon) int x 10000
  */
 #define WMO_HEADER_SIZE		CTRLHDR_WMO_SIZE	/* common.h */
 #define WMOID_SIZE		WMO_ID_SIZE		/* common.h */
@@ -61,24 +72,37 @@ struct nesdis_product_def_block {
   int nx;
   int ny;
   int res;	/* resolution */
+  /* extended parameters */
+  int lat1;
+  int lon1;
+  int lov;
+  int dx;
+  int dy;
+  int latin;
+  int lat2;
+  int lon2;
 };
 
 struct {
   int opt_background;
+  int opt_extended_info;
   char *opt_inputfile;
-} g = {0, NULL};
+} g = {0, 0, NULL};
 
 int read_nesdis_pdb(int fd, struct nesdis_product_def_block *npdb);
 void fill_nesdis_pdb(struct nesdis_product_def_block *npdb);
 int write_file_info(char *in_file);
-void output(struct nesdis_product_def_block *npdb);
+void output(struct nesdis_product_def_block *npdb, int opt_extended_info);
+
+static unsigned int unpack_uint16(void *p, size_t start);
+static unsigned int unpack_uint24(void *p, size_t start);
 
 int main(int argc, char **argv){
 
   int status = 0;
   int c;
-  char *optstr = "bhi:";
-  char *usage = "nbspsatinfo [-b] [-h] [-i file]";
+  char *optstr = "behi:";
+  char *usage = "nbspsatinfo [-b] [-e] [-h] [-i file]";
 
   set_progname(basename(argv[0]));
 
@@ -87,6 +111,9 @@ int main(int argc, char **argv){
     case 'b':
       g.opt_background = 1;
       break;
+    case 'e':
+      g.opt_extended_info = 1;
+      break;      
     case 'i':
       g.opt_inputfile = optarg;
       break;
@@ -134,8 +161,12 @@ void fill_nesdis_pdb(struct nesdis_product_def_block *npdb){
   npdb->sector = (int)p[2];
   npdb->channel = (int)p[3];
 
+  /*
   npdb->numlines = (int)((p[4] << 8) + p[5]);
   npdb->linesize = (int)((p[6] << 8) + p[7]);
+  */
+  npdb->numlines = (int)unpack_uint16(p, 4);
+  npdb->linesize = (int)unpack_uint16(p, 4);
 
   npdb->year = (int)p[8];
   npdb->year += 1900;
@@ -146,10 +177,24 @@ void fill_nesdis_pdb(struct nesdis_product_def_block *npdb){
   npdb->secs = (int)p[13];
   npdb->hsecs = (int)p[14];
 
+  /*
   npdb->nx = (int)((p[16] << 8) + p[17]);
   npdb->ny = (int)((p[18] << 8) + p[19]);
+  */
+  npdb->nx = (int)unpack_uint16(p, 16);
+  npdb->ny = (int)unpack_uint16(p, 18);
 
   npdb->res = (int)p[41];
+
+  /* extended parameters */
+  npdb->lat1 = (int)unpack_uint24(p, 20);
+  npdb->lon1 = (int)unpack_uint24(p, 23);
+  npdb->lov = (int)unpack_uint24(p, 27);
+  npdb->dx = (int)unpack_uint24(p, 30);
+  npdb->dy = (int)unpack_uint24(p, 33);
+  npdb->latin = (int)unpack_uint24(p, 38);
+  npdb->lat2 = (int)unpack_uint24(p, 55);
+  npdb->lon2 = (int)unpack_uint24(p, 58);
 
   for(n = 0; n <= WMOID_SIZE - 1; ++n)
     npdb->wmoid[n] = tolower(npdb->buffer[n]);
@@ -231,7 +276,7 @@ int write_file_info(char *in_file){
     }
   }else{
     /*
-     * The frame is uncmpressed.
+     * The frame is uncompressed.
      */
     if(n != npdb.buffer_size){
       log_errx(1, "Error reading pdb. File too short.");
@@ -242,12 +287,12 @@ int write_file_info(char *in_file){
 
   fill_nesdis_pdb(&npdb);
 
-  output(&npdb);
+  output(&npdb, g.opt_extended_info);
 
   return(0);
 }
 
-void output(struct nesdis_product_def_block *npdb){
+void output(struct nesdis_product_def_block *npdb, int opt_extended_info){
 
   struct tm tm;
   time_t time;
@@ -261,11 +306,59 @@ void output(struct nesdis_product_def_block *npdb){
 
   time = timegm(&tm);
 
-  fprintf(stdout, "%d %d %d %d %d " "%" PRIuMAX "\n", 
+  fprintf(stdout, "%d %d %d %d %d " "%" PRIuMAX, 
 	  npdb->source, 
 	  npdb->creating_entity, 
 	  npdb->sector, 
 	  npdb->channel,
 	  npdb->res,
 	  (uintmax_t)time);
+
+  if(opt_extended_info == 0){
+    fprintf(stdout, "\n");
+    return;
+  }
+
+  fprintf(stdout, " %d %d %d %d %d %d %d %d\n",
+	  npdb->lat1,
+	  npdb->lon1,
+	  npdb->lov,
+	  npdb->dx,
+	  npdb->dy,
+	  npdb->latin,
+	  npdb->lat2,
+	  npdb->lon2);
+}
+
+/*
+ * utility functions
+ */
+static unsigned int unpack_uint16(void *p, size_t start){
+  /*
+   * The first byte is the most significant one and the last byte is
+   * the least significant.
+   */
+  unsigned int u;
+  unsigned char *uptr;
+
+  uptr = &((unsigned char*)p)[start];
+
+  u = (uptr[0] << 8) + uptr[1];
+
+  return(u);
+}
+
+static unsigned int unpack_uint24(void *p, size_t start){
+  /*
+   * The first byte is the most significant one and the last byte is
+   * the least significant.
+   */
+  unsigned int u;
+  unsigned char *uptr;
+
+  uptr = &((unsigned char*)p)[start];
+
+  u = (uptr[0] << 16) + (uptr[1] << 8) + uptr[2];
+
+  return(u);
 }
