@@ -55,3 +55,4 @@ r4 -
   plot the wind direction as well (suggested by Scott <ssshoema@gmail.com>).
 - Added -r and -R options to the nbspmtrplot1 script.
 - Text files are filetered through tr in the rstfilter to delete cntrl chars.
+- Added -e to nbspsat and nbspsatinfo (to extract the lat-lon parameters).
